# ragna

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  .readthedocs.yml  DOCUMENT.py  Dockerfile  Dockerfile-pydatanyc2023  LICENSE  README.md  SECURITY.md  app.py  arqtest.py  auth.md  bar.py  comparison.py  compose.yml  corpus.md  corpus.py  debug_dirty.py  entrypoints.ipynb  environment-dev-exl.yml  environment-dev.yaml  environment-dev.yml  environment.yaml  environment.yml  foo.py  foo.txt  main.py  main2.py  mkdocs.yml  netlify.toml  noxfile.py  panel_presign.py  preprocessing_demo.ipynb  presigned.py  pyproject.toml  ragna-docker.toml  ragna-pydatanyc2023.toml  (+10 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: DOCKER_ISSUE_TEMPLATE.md  bug-report.yml  bug.yml  config.yml  feature-request.yml  support.yml
.github/workflows/: build_package.yml  docker.yml  lint.yml  release.yml  test.yml  update-docker-requirements.yml
docs/: .gitignore  documentation_helpers.py  get-started.md  index.md  install.md
docs/assets/: openapi.json  ragna.txt  stylesheet.css
docs/community/: brand.md  contribute.md  roadmap.md  welcome.md
docs/examples/: .gitignore  README.md  example_answer_stream.py  example_python_api.py  gallery_python_api.py  gallery_rest_api.py  gallery_streaming.py  helpers.py  ragna.txt
docs/explanations/: what-is-rag.md
docs/galleries_common/: helpers.py
docs/hooks/: cli.py  gitignore.py  rest_api.py
docs/how-tos/: set-configuration.md
docs/overrides/: main.html
docs/references/: changelog.md  config.md  deploy.md  faq.md  generate_cli_doc.py  python-api.md  release-notes.md  rest-api.md
docs/source/: conf.py  index.md
docs/stylesheets/: extra.css
docs/tutorials/: .gitignore  gallery_adding_an_assistant.py  gallery_adding_components.py  gallery_adding_more_assistants.py  gallery_adding_source_storages.py  gallery_custom_components.py  gallery_python_api.py  gallery_rest_api.py  gallery_web_ui.py  python-api.md  rest-api.md  web-app.md
examples/: .gitignore  corpus.ipynb  python_api.ipynb
examples/fastapi/: README.md  client.py  server.py
examples/local_llm/: local_llm.ipynb
examples/panel_app/: README.md  main.py
examples/python_api/: fsspec_demo.ipynb  python_api.ipynb
examples/rest_api/: fsspec_demo.ipynb  rest_api.ipynb
examples/s3_documents/: .env.tpl  ragna-s3.toml  ragna_s3_document.py  s3_document.py  s3_document_config.py  s3_documents.ipynb
examples/upload/: README.md  app.py  helpers.py  upload.py
meta-package/: pyproject.toml  setup.py
ora/: __init__.py  __main__.py
ora/_backend/: __init__.py  component.py  doc_db.py  doc_meta.py  document.py  hookspecs.py  llm.py  source_storage.py  utils.py
ora/_cli/: extensions.py  list_requirements.py  main.py
ora/_ui/: app_config.py  main.py
ora/extensions/: __init__.py  _demo.py  demo.py
ora/utils/: __init__.py  _chunk.py  _misc.py
plugins/vikings/: pyproject.toml
plugins/vikings/src/vikings/assistants/: __init__.py
preprocessing_demo/: preprocessing_demo.ipynb
preprocessing_demo/temporal_docs/: doc_0.md  doc_1.md  doc_2.md  mkdocs.py
ragna/: __init__.py  __main__.py  _api.py  _cli.py  _compat.py  _docs.py  _utils.py
ragna-coming-soon-site/: README.md  index.html  styles.css
ragna/_api/: __init__.py  core.py  database.py  orm.py  schemas.py
ragna/_backend/: __init__.py  component.py  document.py  extra_config.py  hookspecs.py  llm.py  requirement.py  source_storage.py
ragna/_cli/: config.py  core.py  corpus.py  defaults.py  extensions.py  list_requirements.py  main.py
ragna/_ui/: __init__.py  api_wrapper.py  app.py  app_config.py  auth_page.py  central_view.py  chat_config.py  chat_data.py  js.py  left_sidebar.py  logout_page.py  main.py  main_page.py  modal_configuration.py  modal_welcome.py  right_sidebar.py  style.py  styles.py
ragna/api/: __init__.py  _auth.py  _core.py  _database.py
ragna/assistant/: __init__.py  _api.py  _demo.py  _openai.py
ragna/assistants/: __init__.py  _ai21labs.py  _airoboros.py  _anthropic.py  _api.py  _azure.py  _bedrock.py  _cohere.py  _demo.py  _exl2.py  _google.py  _http_api.py  _llamafile.py  _mistral_ai.py  _mosaicml.py  _ollama.py  _openai.py  _openai_api_compatible.py  _utils.py
ragna/chunking_models/: __init__.py  _generic_chunking_model.py  _nltk_chunking_model.py
ragna/core/: __init__.py  _assistant.py  _authentication.py  _compat.py  _component.py  _components.py  _config.py  _core.py  _document.py  _exceptions.py  _llm.py  _metadata_filter.py  _orm.py  _queue.py  _rag.py  _requirement.py  _source_storage.py  _state.py  _utils.py
ragna/css/: global_overrides.css
ragna/deploy/: __init__.py  _api.py  _auth.py  _authentication.py  _config.py  _core.py  _database.py  _engine.py  _key_value_store.py  _orm.py  _schemas.py  _session.py  _utils.py  database.py  schemas.py
ragna/deploy2/: __init__.py  _api.py  _app.py  _auth.py  _constants.py  _core.py  _database.py  _engine.py  _session.py  _ui.py  _utils.py  schemas.py
ragna/document_handlers/: __init__.py  _pdf.py  _txt.py
ragna/embedding_models/: __init__.py  _all_minilm_l6_v2.py  _embedding.py  _minilm_l6_v2.py
ragna/extensions/: __init__.py  _demo.py  demo.py
ragna/llm/: __init__.py  _demo.py  _llm_api.py  _openai.py
ragna/preprocessors/: __init__.py  _demo.py
ragna/source_storage/: __init__.py  _chroma.py  _demo.py  _lancedb.py
ragna/source_storages/: __init__.py  _chroma.py  _chunking.py  _chunking_model.py  _demo.py  _embedding.py  _embedding_model.py  _lancedb.py  _qdrant.py  _utils.py  _vector_database.py
ragna/ui/: api_wrapper.py  app.py  app_config.py  auth_page.py  central_view.py  chat_config.py  js.py  left_sidebar.py  main_page.py  modal.py  modal_configuration.py  (+4 more)
ragna2/: __init__.py  _cli.py
scripts/: add_chats.py  build_helper.py  docs_gen_files.py  get_all_core_deps.py  pyproject-base.toml  update_optional_dependencies.py
tests/: conftest.py  test_dependencies.py  test_docs.py  test_importable.py  test_js_utils.py  test_utils.py  utils.py
vikings/: pyproject.toml
(+181 files in other folders)
