[project]
name = "vikings"
description = "A collection of bearded and aggressive assistants."
version = "0.1.0"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)

[project.entry-points."ragna.assistants"]
ivar = "vikings.assistants:Ivar"
